--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 }
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 body * {
   font-family: "Roboto", sans-serif;
@@ -138,4 +139,14 @@ footer {
   text-align: center;
   font-size: 14px;
 
+}
+
+/* media queries */
+@media  (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/assets/bg-desktop.jpg);
+  }
+ .light {
+   --bg-url: url(/assets/assets/bg-desktop-light.jpg);
+  } 
 }
